--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
     <title>多模态R1项目</title>
     <link rel="stylesheet" href="style.css">
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css" rel="stylesheet">
+    <script src="https://cdn.jsdelivr.net/npm/marked/marked.min.js"></script>
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/github-markdown-css/github-markdown.css">
 </head>
 <body>
     <div class="container">
@@ -67,11 +69,11 @@
         </button>
 
         <div class="results">
-            <div class="result-section">
+            <div class="result-section markdown-body">
                 <h3>模型A分析结果：</h3>
                 <div id="modelA-result"></div>
             </div>
-            <div class="result-section">
+            <div class="result-section markdown-body">
                 <h3>模型B解答：</h3>
                 <div id="modelB-result"></div>
             </div>
